added in dbt + small updates
relocated Dockerfile and added in dbt to project

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,9 +8,9 @@ services: #listing all the services
     networks: #network on which our containers will run
       - elt_network
     environment: #setting env variables
-      - POSTGRES_DB: source_db
-      - POSTGRES_USER: postgres
-      - POSTGRES_PASSWORD: secret
+       POSTGRES_DB: source_db
+       POSTGRES_USER: postgres
+       POSTGRES_PASSWORD: secret
     volumes: #setting volumes and initial sql files; also mapping it to the docker volume
       - ./source_db_init/init.sql:/docker-entrypoint-initdb.d/init.sql
 
@@ -21,14 +21,14 @@ services: #listing all the services
     networks: #network on which our container will run
       - elt_network
     environment: #setting env variables
-      - POSTGRES_DB: destination_db
-      - POSTGRES_USER: postgres
-      - POSTGRES_PASSWORD: secret
+       POSTGRES_DB: destination_db
+       POSTGRES_USER: postgres
+       POSTGRES_PASSWORD: secret
 
 
   elt_script: #service to let docker know what we want to do with data; also to allow script to run automatically
     build:
-      context: ./elt_script #where file is located
+      context: ./elt #where file is located
       dockerfile: Dockerfile
     command: [ "python", "elt_script.py" ] #command to run python
     networks:
